@@ -24,6 +24,9 @@ Release 2.7.1 - UNRELEASED
     YARN-2902. Killing a container that is localizing can orphan resources in
     the DOWNLOADING state (Varun Saxena via jlowe)
 
+    YARN-4354. Public resource localization fails with NPE. (Jason Lowe via 
+    junping_du)
+
     YARN-3878. AsyncDispatcher can hang while stopping if it is configured for
     draining events on stop. (Varun Saxena via jianhe)
   
